<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_add_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEditActivityFragment"
    tools:showIn="@layout/activity_add_edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/avtar"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-30dp"
            android:src="@drawable/plus" />

    <EditText
        android:id="@+id/addedit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/addedit_name_hint"
        android:inputType="textNoSuggestions|textPersonName"
        android:maxLength="64" />

    <EditText
        android:id="@+id/addeditPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextPhone_hint"
        android:inputType="phone"
        android:maxLength="13" />

    <EditText
        android:id="@+id/addeditAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextAddress_hint"
        android:inputType="textMultiLine"
        android:maxLength="256" />

    <EditText
        android:id="@+id/addeditCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextCity_hint"
        android:inputType="textPersonName"
        android:maxLength="20" />

    <EditText
        android:id="@+id/addedit_sortorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addedit_sortorder"
        android:inputType="number"
        android:maxLength="9" />


    <Button
        android:id="@+id/addedit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_save"
        android:text="@string/addedit_save_text" />
    </LinearLayout>
</LinearLayout>

